--- a/Visual_ChatGPT.ipynb
+++ b/Visual_ChatGPT.ipynb
@@ -62,7 +62,7 @@
         "!wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz\n",
         "!tar -xzf ngrok-v3-stable-linux-amd64.tgz\n",
         "!rm *.tgz\n",
-        "!./ngrok config add-authtoken "API_KEY_NGROK"\n",
+        "!./ngrok config add-authtoken 'API_KEY_NGROK'\n",
         "!./ngrok http 7868 >& /dev/null &"
       ],
       "metadata": {
@@ -75,7 +75,7 @@
       "cell_type": "code",
       "source": [
         "!wget https://raw.githubusercontent.com/microsoft/visual-chatgpt/main/visual_chatgpt.py\n",
-        "%env OPENAI_API_KEY="API_KEY_OPENAI"\n",
+        "%env OPENAI_API_KEY='API_KEY_OPENAI'\n",
         "!python visual_chatgpt.py --load \"ImageCaptioning_cuda:0,Text2Image_cuda:0\""
       ],
       "metadata": {
